<resources>
    <string name="app_name">FavDish</string>
    <string name="title_all_dishes">All dishes</string>
    <string name="title_favorite_dishes">Favorite</string>
    <string name="title_random_dishes">Random dish</string>
    <string name="splash_screen_title">Fav Dish</string>
    <string name="add_fav_dish">Add fav dish</string>

    <string name="add_dish">Add dish</string>
    <string name="lbl_add_dish"> ADD DISH</string>
    <string name="image_contentDescription">image</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_type">Type</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_ingredients">Ingredients</string>
    <string name="lbl_cooking_time_in_minutes">Cooking Time In Minutes</string>
    <string name="lbl_direction_to_cook">Direction To Cook</string>

    <string name="title_select_image_action">Select Image Action</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>

    <string name="alert_dialog_text">It Looks like you have turned off permissions required for this feature. It can be enabled under Application Settings</string>

    <string name="title_select_dish_type">Select dish type: </string>
    <string name="title_select_dish_category">Select dish category: </string>
    <string name="title_select_dish_time">Select cooking time in minutes: </string>

    <string name="err_msg_select_dish_image">Select dish image.</string>
    <string name="err_msg_enter_dish_title">Enter dish title.</string>
    <string name="err_msg_select_dish_type">Select dish type.</string>
    <string name="err_msg_select_dish_category">Select dish category.</string>
    <string name="err_msg_select_dish_ingredients">Enter dish ingredients.</string>
    <string name="err_msg_select_dish_cooking_time">Select dish cooking time.</string>
    <string name="err_msg_enter_dish_cooking_instructions">Enter dish cooking instructions.</string>
    <string name="all_entries_are_valid">All the entries are valid.</string>

    <string name="label_no_dishes_added_yet">No %1$s available</string>
    <string name="list_of_dish_empty">The list of your fav dishes are empty</string>
    <string name="label_no_fav_dishes_added_yet">No favorite dishes available</string>
    <string name="actual_dish_image">actual dish image</string>
    <string name="dish_details">Dish details</string>

    <string name="label_estimate_cooking_time">The approx time required to cook the dish is %1$s minute</string>
    <string name="msg_added_to_favorites">You have added the dish to your favorites.</string>
    <string name="msg_removed_from_favorites">You have removed the dish from your favorites.</string>
    <string name="action_edit_dish">Edit</string>
    <string name="action_delete_dish">Delete</string>

    <string name="title_add_dish">Add dish</string>
    <string name="title_edit_dish">Edit dish</string>
    <string name="lbl_update_dish">Update dish</string>

    <string name="title_delete_dish">Delete dish</string>
    <string name="msg_delete_dish_dialog">Are you sure you want to delete %1$s ?</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>

    <string name="action_filter_dishes">Filter Dishes</string>
    <string name="title_select_item_to_filter">Select item to filter: </string>

    <string name="msg_already_added_to_favorites">You have already added the dish to your favorites.</string>
    <string name="please_wait">Please wait...</string>
    <string name="action_share_dish">Share Dish</string>

    <string name="notification_title">Checkout new dish recipes</string>
    <string name="notification_subtitle">Tap for more details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_theme">Setting theme</string>

    <string name="about_disconnected">Wake up your internet connection to get a random dish recipe.</string>
    <string name="select_color_theme">Select theme color:</string>

</resources>