<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_filter_dishes"
        android:icon="@drawable/ic_filter_list"
        android:title="@string/action_filter_dishes"
        android:orderInCategory="100"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_add_dish"
        android:icon="@drawable/ic_add"
        android:title="@string/add_fav_dish"
        android:orderInCategory="101"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_theme_setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting_theme"
        android:orderInCategory="102"
        app:showAsAction="always"
        />

</menu>