<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_all_dishes">

    <fragment
        android:id="@+id/navigation_all_dishes"
        android:name="com.udemy_jetpack.favdish.view.fragments.AllDishesFragment"
        android:label="@string/title_all_dishes"
        tools:layout="@layout/fragment_all_dishes" >
        <action
            android:id="@+id/action_navigation_all_dishes_to_navigation_dish_details"
            app:destination="@id/navigation_dish_details"
            app:enterAnim="@anim/anim_slide_up"
            app:exitAnim="@anim/anim_fade_out"
            app:popEnterAnim="@anim/anim_fade_in"
            app:popExitAnim="@anim/anim_slide_down" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite_dishes"
        android:name="com.udemy_jetpack.favdish.view.fragments.FavoriteDishesFragment"
        android:label="@string/title_favorite_dishes"
        tools:layout="@layout/fragment_favorite_dishes" >
        <action
            android:id="@+id/action_navigation_favorite_dishes_to_navigation_dish_details"
            app:destination="@id/navigation_dish_details"
            app:enterAnim="@anim/anim_slide_up"
            app:exitAnim="@anim/anim_fade_out"
            app:popEnterAnim="@anim/anim_fade_in"
            app:popExitAnim="@anim/anim_slide_down"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_random_dishes"
        android:name="com.udemy_jetpack.favdish.view.fragments.RandomDishFragment"
        android:label="@string/title_random_dishes"
        tools:layout="@layout/fragment_random_dish"/>

    <fragment
        android:id="@+id/navigation_dish_details"
        android:name="com.udemy_jetpack.favdish.view.fragments.DishDetailsFragment"
        android:label="@string/dish_details"
        tools:layout="@layout/fragment_dish_details">
        <argument
            android:name="dishDetails"
            app:argType="com.udemy_jetpack.favdish.model.entities.FavDish"
            />
    </fragment>
</navigation>